# kl3m-tokenizers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: compare_char_tokenizers.py  compare_tokenizers.py
kl3m-001-32k/: README.md  merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
kl3m-003-64k/: README.md  tokenizer_config.json
kl3m-004-128k-cased/: README.md  tokenizer_config.json
kl3m-004-128k-cased-mlm/: README.md  tokenizer_config.json
kl3m-004-128k-uncased/: README.md
kl3m-004-128k-uncased-mlm/: README.md  tokenizer_config.json
kl3m-004-char-16k-cased/: README.md  merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
kl3m-004-char-4k-cased/: README.md  merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
kl3m-004-char-8k-cased/: README.md  merges.txt  tokenizer.json  vocab.json
kl3m-005-multi-word-example-32k/: tokenizer.json  tokenizer_config.json  tokenizer_with_pretokenizer.json
kl3m_tokenizers/tokenizers/kl3m_001/: train_tokenizer.py
kl3m_tokenizers/tokenizers/kl3m_003/: train_tokenizer.py
kl3m_tokenizers/tokenizers/kl3m_004/: train_char_tokenizer.py  train_tokenizer.py
kl3m_tokenizers/tokenizers/kl3m_005/: __init__.py  sample_config.json  train_tokenizer.py  train_tokenizer_from_config.py
scripts/: upload_tokenizers.py
